--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,18 @@
       <version>5.8.1</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>org.junit.platform</groupId>
+      <artifactId>junit-platform-launcher</artifactId>
+      <version>1.8.1</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.junit.platform</groupId>
+      <artifactId>junit-platform-engine</artifactId>
+      <version>1.8.1</version>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
 
   <build>
